--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
+    "moment": "^2.17.1",
     "react": "^15.4.2",
     "webpack": "^2.2.1"
   }
