--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "bel",
     "ninkasi"
   ],
+  "bin": {
+    "mocha": "node_modules/.bin/mocha"
+  },
   "scripts": {
-    "build": "webpack --progress --colors --display-error-details"
+    "build": "webpack --progress --colors --display-error-details",
+    "test": "mocha -r jsdom-global/register --compilers js:babel-core/register ./tests/calculations.spec.js"
   },
   "author": "Morten Friesgaard",
   "license": "MIT",
@@ -23,6 +27,10 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
+    "expect": "^1.20.2",
+    "jsdom": "^9.9.1",
+    "jsdom-global": "^2.1.1",
+    "mocha": "^3.2.0",
     "moment": "^2.17.1",
     "react": "^15.4.2",
     "webpack": "^2.2.1"
