--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bogu",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Conjuntion of code in bel and ninkasi",
   "main": "index.js",
   "keywords": [
@@ -8,7 +8,7 @@
     "ninkasi"
   ],
   "bin": {
-    "mocha": "node_modules/.bin/mocha"
+    "mocha": "./node_modules/mocha/bin/mocha"
   },
   "scripts": {
     "build": "webpack --progress --colors --display-error-details",
