--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,15 @@
 {
-  "presets": ["es2015", "react", "stage-0"],
-  "plugins": ["transform-runtime"]
+  "presets": [
+    ["es2015", {"modules": false}], //webpack understands the native import syntax, and uses it for tree shaking
+    "react",
+    "stage-0"
+  ],
+  "env": {
+    "development": {
+      "plugins": [
+        "transform-runtime",
+        "react-hot-loader/babel" // Enables React code to work with HMR.
+      ]
+    }
+  }
 }
