--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bogu",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Conjuntion of code in bel and ninkasi",
   "main": "index.js",
   "keywords": [
@@ -9,6 +9,7 @@
   ],
   "scripts": {
     "build": "webpack --progress --colors --display-error-details",
+    "dev": "webpack-dev-server",
     "test": "./node_modules/mocha/bin/mocha -r jsdom-global/register --compilers js:babel-core/register ./tests/calculations.spec.js"
   },
   "author": "Morten Friesgaard",
@@ -30,6 +31,9 @@
     "mocha": "^3.2.0",
     "moment": "^2.17.1",
     "react": "^15.4.2",
-    "webpack": "^2.2.1"
+    "react-dom": "^15.4.2",
+    "react-hot-loader": "^3.0.0-beta.6",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.1.0-beta.0"
   }
 }
