--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,9 @@
     "stage-0"
   ],
   "env": {
+    "production" : {
+      "presets": ["es2015", "react", "stage-0"]
+    },
     "development": {
       "plugins": [
         "transform-runtime",
