--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bogu",
-  "version": "0.1.4",
+  "version": "0.1.7",
   "description": "Conjuntion of code in bel and ninkasi",
   "main": "index.js",
   "keywords": [
@@ -17,6 +17,9 @@
   "peerDependencies": {
     "react": "^15.4.2"
   },
+  "dependencies": {
+    "moment": "^2.17.1"
+  },
   "devDependencies": {
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
@@ -29,7 +32,6 @@
     "jsdom": "^9.9.1",
     "jsdom-global": "^2.1.1",
     "mocha": "^3.2.0",
-    "moment": "^2.17.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-hot-loader": "^3.0.0-beta.6",
