--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bogu",
-  "version": "0.2.9",
+  "version": "0.3.0",
   "description": "Conjuntion of code in bel and ninkasi",
   "main": "index.js",
   "keywords": [
@@ -28,6 +28,7 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
+    "css-loader": "^0.28.0",
     "expect": "^1.20.2",
     "jsdom": "^9.9.1",
     "jsdom-global": "^2.1.1",
@@ -35,6 +36,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-hot-loader": "^3.0.0-beta.6",
+    "style-loader": "^0.16.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.1.0-beta.0"
   }
