--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "build": "BABEL_ENV=production webpack --progress --colors --display-error-details",
     "dev": "webpack-dev-server",
-    "test": "BABEL_ENV=production ./node_modules/mocha/bin/mocha -r jsdom-global/register --compilers js:babel-core/register ./tests/calculations.spec.js"
+    "test": "jest tests"
   },
   "author": "Morten Friesgaard",
   "license": "MIT",
@@ -32,6 +32,7 @@
     "babel-preset-stage-0": "^6.22.0",
     "css-loader": "^0.28.0",
     "expect": "^1.20.2",
+    "jest": "^20.0.3",
     "jsdom": "^9.9.1",
     "jsdom-global": "^2.1.1",
     "mocha": "^3.2.0",
