--- a/.babelrc
+++ b/.babelrc
@@ -1,17 +1,16 @@
 {
-  "presets": [
-    ["es2015", {"modules": false}], //webpack understands the native import syntax, and uses it for tree shaking
-    "react",
-    "stage-0"
-  ],
+  "presets": ["es2015", "react", "stage-0", "flow"],
   "env": {
-    "production" : {
-      "presets": ["es2015", "react", "stage-0"]
-    },
     "development": {
       "plugins": [
         "transform-runtime",
         "react-hot-loader/babel" // Enables React code to work with HMR.
+      ],
+      "presets": [
+        ["es2015", {"modules": false}], //webpack understands the native import syntax, and uses it for tree shaking
+        "flow",
+        "react",
+        "stage-0"
       ]
     }
   }
