--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bogu",
-  "version": "0.6.5",
+  "version": "0.6.6",
   "description": "Conjuntion of code in bel and ninkasi",
   "main": "index.js",
   "keywords": [
@@ -20,7 +20,8 @@
     "react-icons": "^2.2.3"
   },
   "dependencies": {
-    "moment": "^2.17.1"
+    "moment": "^2.17.1",
+    "react-icons": "^2.2.7"
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
