--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
   "license": "MIT",
   "peerDependencies": {
     "material-ui": "^0.18.0",
-    "react": "^15.6.1",
-    "react-icons": "^2.2.3"
+    "react": "^15.6.1"
   },
   "dependencies": {
-    "moment": "^2.17.1"
+    "moment": "^2.17.1",
+    "react-icons": "^2.2.3"
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
